// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema
// to migrate "prisma migrate dev --name [name]"

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model Address {
    id      Int     @id @default(autoincrement())
    street  String
    city    String
    country String
    user    User?
}

model Post {
    id         Int     @id @default(autoincrement())
    title      String
    content    String
    author     User    @relation(fields: [authorId], references: [id])
    authorId   Int
    categories Category[]
}

model Category {
    id      Int     @id @default(autoincrement())
    name    String
    posts   Post[]
}

model User {
  id                    Int      @id @default(autoincrement())
  email                 String   @unique
  firstname             String?
  lastname              String?
  role                  Role     @default(USER)
  hashedRefreshToken    String?
  hashedPassword        String?
  createdAt             DateTime @default(now())
  address               Address? @relation(fields: [addressId], references: [id])
  addressId             Int?
  posts                 Post[]
}

enum Role {
    ADMIN
    USER
}
