//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Address {
  id Int [pk, increment]
  street String [not null]
  city String [not null]
  country String [not null]
  user User
}

Table Post {
  id Int [pk, increment]
  title String [not null]
  content String [not null]
  author User [not null]
  authorId Int [not null]
  categories Category [not null]
}

Table Category {
  id Int [pk, increment]
  name String [not null]
  posts Post [not null]
}

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  firstname String
  lastname String
  role Role [not null, default: 'USER']
  hashedRefreshToken String
  hashedPassword String
  createdAt DateTime [default: `now()`, not null]
  address Address
  addressId Int [unique]
  posts Post [not null]
}

Table CategoryToPost {
  categoriesId Int [ref: > Category.id]
  postsId Int [ref: > Post.id]
}

Enum Role {
  ADMIN
  USER
}

Ref: Post.authorId > User.id

Ref: User.addressId - Address.id